# Gift

./: .gitignore  AGENTS.md  BUILDING_DOCKER.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  Cargo.toml  Dockerfile  GOVERNANCE.md  Justfile  README.md  RELEASE.md  SECURITY.md  deny.toml  download_cli.ps1  download_cli.sh  leaf-self-test.yaml  run_cross_local.md  test_acp_client.py
.github/: copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: qa.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  submit-recipe.yml
.github/workflows/: build-cli.yml  build-notify.yml  cargo-deny.yml  cargo-machete.yml  check-release-pr.yaml  ci.yml  create-release-pr.yaml  docs-update-cli-ref.yml  docs-update-recipe-ref.yml  goose-issue-solver.yml  goose-pr-reviewer.yml  goose-release-notes.yml  leaf-issue-solver.yml  leaf-pr-reviewer.yml  leaf-release-notes.yml  minor-release.yaml  nightly-release.yml  pr-comment-build-cli.yml  pr-smoke-test.yml  quarantine.yml  (+11 more)
.husky/: pre-commit
.zed/: debug.json
crates/leaf-test-support/: Cargo.toml
crates/leaf-test-support/examples/: mcp_fixture_server.rs
crates/leaf-test-support/src/: lib.rs
examples/: frontend_tools.py
npm/: README.md
recipe-scanner/: Dockerfile  base_recipe.yaml  config.yaml  decode-training-data.py  scan-recipe.sh
scripts/: README.md  check-no-native-tls.sh  diagnostics-viewer.py  leaf-db-helper.sh  parse-benchmark-results.sh  pre-release.sh  run-benchmarks.sh  test_compaction.sh  test_lead_worker.sh  test_mcp.sh  test_providers.sh  test_providers_code_exec.sh  test_providers_lib.sh  test_subrecipes.sh
(+288 files in other folders)
