[package]
name = "leaf-test-support"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
telemetry = ["dep:opentelemetry"]

[dependencies]
axum = { workspace = true }
env-lock = { workspace = true }
opentelemetry = { workspace = true, optional = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
serde_json.workspace = true
tokio.workspace = true

[[example]]
name = "mcp_fixture_server"
path = "examples/mcp_fixture_server.rs"

[lints]
workspace = true

[package.metadata.cargo-machete]
# Used for tool description in mcp.rs
ignored = ["serde_json"]
